Added sort, select, limit, pagination
